# warehouse-db

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile.backup-scheduler  Dockerfile.metabase  Dockerfile.migrator  Dockerfile.patroni  Dockerfile.warehouse-api  README.md  docker-compose.yml  liquibase.changelog.xml  openapi.yaml  schema.dbml
clickhouse/: config.xml  users.xml
haproxy/: haproxy.cfg
load/: k6_script.js  k6_write_script.js
migrations/: 000_baseline_tag.sql  001_reference_entities.sql  002_products.sql  003_procurement.sql  004_customer_orders.sql  005_shipments_and_inventory.sql  006_monitoring_role.sql  007_optimization_workload.sql  008_customer_order_delivery_window.sql  009_customer_order_audit_notes.sql  010_customer_order_denormalized_totals.sql  011_idx_audit_notes_order_created.sql  012_idx_audit_notes_created_brin.sql  013_mv_revenue_by_day_category.sql  014_idx_inventory_movements_moved_warehouse_product.sql  015_bi_cdc_setup.sql
patroni/: bootstrap.sh  patroni-entrypoint.sh  patroni.yml.tmpl
profiling/: README.md
scripts/: backup-entrypoint.sh  backup-exporter.py  backup-once.sh  bi-cdc-smoke.sh  chaos-common.sh  ci-down-one.sh  ci-up-one.sh  collect-profiling.sh  common.sh  demo-etcd-quorum-loss.sh  demo-failover.ps1  demo-failover.sh  metabase-build  migrator-entrypoint.sh  minio-init.sh  refresh-optimization-views.sh  restore-backup.sh  seed.sh
seeds/: 001_seed.sql  002_seed.sql  003_seed.sql  004_seed.sql  005_seed.sql  007_seed.sql  008_seed.sql  009_seed.sql  (+1 more)
workload/: CMakeLists.txt  Dockerfile
workload/src/: main.cpp
(+48 files in other folders)
